--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</style>
 </head>
 <body>
-	<p>Your ID: <span id="myId"></span></p>
+	<p>Your ID: <span id="my-id"></span></p>
 	<div id="coordinates" style="
 		position: absolute;
 		top: 10px;
