--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		body { margin: 0; overflow: hidden; }
 		canvas { display: block; }
 	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<p>Your ID: <span id="my-id"></span></p>
