--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 	</div>
 	<input id="peer-id-input" placeholder="Enter friend's ID" />
 	<button id="connect-button">Connect</button>
+	<div id="controls" style="position: fixed; bottom: 20px; left: 20px; z-index: 1000;">
+		<button id="up">↑</button><br>
+		<button id="left">←</button>
+		<button id="down">↓</button>
+		<button id="right">→</button>
+	</div>
+
 	<script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
 	<script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 	<script src="game.js"></script>
