--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	<style>
 		body { margin: 0; overflow: hidden; }
 		canvas { display: block; }
+		button {
+			user-select: none;
+			-webkit-user-select: none; /* Safari */
+			-ms-user-select: none; /* IE/Edge */
+			outline: none;
+			-webkit-tap-highlight-color: transparent;
+		}
 	</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
