--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		position: fixed;
 		top: 0;
 		left: 0;
-		width: 100%;
+		width: 300px;
 		height: 32px;
 		background: rgba(0,0,0,0.4);
 		z-index: 10000;
