--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<div id="health-bar-container" style="
 		position: fixed;
 		top: 0;
-		left: 0;
-		width: 300px;
+		left: 20px;
+		width: 500px;
 		height: 32px;
 		background: rgba(0,0,0,0.4);
 		z-index: 10000;
