--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<div id="health-bar-container" style="
 		position: fixed;
 		top: 0;
-		left: 200px;
-		width: 500px;
+		left: 25%;
+		width: 50%;
 		height: 32px;
 		background: rgba(1,0,0,0.4);
 		z-index: 10000;
