--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>3D Multiplayer Cubes</title>
+	<link rel="icon" href="https://d1nhio0ox7pgb.cloudfront.net/_img/g_collection_png/standard/32x32/object_cube.png" type="image/x-icon" />
 	<style>
 		body { margin: 0; overflow: hidden; }
 		canvas { display: block; }
