--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		#health-bar-container {
 			width: 220px;
 			height: 32px;
-			background: rgba(1,0,0,0.4);
+			background: rgba(0,0,0,0.4);
 			border-radius: 8px;
 			box-sizing: border-box;
 			display: flex;
@@ -34,7 +34,7 @@
 		#health-bar {
 			height: 100%;
 			width: 100%;
-			background: linear-gradient(90deg, #4caf50, #81c784);
+			background: linear-gradient(90deg, #fc0303, #fa4d4d);
 			transition: width 0.3s;
 			border-radius: 8px;
 		}
