--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 		<button id="right">→</button>
 	</div>
 
-	<script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
 	<script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
-	<script src="game.js"></script>
+	<script type="module" src="game.js"></script>
 </body>
 </html>
