--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
 			outline: none;
 			-webkit-tap-highlight-color: transparent;
 		}
+		#creditsModal {
+			display: none;
+			position: fixed;
+			z-index: 1000;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			background-color: rgba(0, 0, 0, 0.6);
+		}
+		#creditsContent {
+			background-color: #fff;
+			margin: 10% auto;
+			padding: 20px;
+			border-radius: 8px;
+			width: 80%;
+			max-width: 500px;
+			box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+		}
+		#closeCredits {
+			float: right;
+			font-size: 20px;
+			font-weight: bold;
+			cursor: pointer;
+		}
 		#top-bar {
 			position: absolute;
 			top: 20px;
@@ -34,7 +60,7 @@
 		#health-bar {
 			height: 100%;
 			width: 100%;
-			background: linear-gradient(90deg, #fc0303, #fa4d4d);
+			background: linear-gradient(90deg, #0ebc01, #89ff75);
 			transition: width 0.3s;
 			border-radius: 8px;
 		}
@@ -73,6 +99,19 @@
 		<button id="right">→</button>
 	</div>
 	
+	<button onclick="document.getElementById('creditsModal').style.display='block'">
+		View Credits
+	</button>
+	<div id="creditsModal">
+		<div id="creditsContent">
+			<span id="closeCredits" onclick="document.getElementById('creditsModal').style.display='none'">&times;</span>
+			<h2>Credits</h2>
+			<p>3D Graphics by Three.js</p>
+			<p>Networking by Peer.js</p>
+			<p>Optimized Collision Detection via three-mesh-bvh</p>
+			<p>Car by Poly by Google [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/75h3mi6uHuC)</p>
+		</div>
+	</div>	
 	<script type="module" src="game.js"></script>
 </body>
 </html>
