Welcome a new car object and credits section!

--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
 			<span id="closeCredits" onclick="document.getElementById('creditsModal').style.display='none'">&times;</span>
 			<h2>Credits</h2>
 			<p>3D Graphics by Three.js</p>
+			<p>Model Loading by Three.js GLBLoader Example</p>
 			<p>Networking by Peer.js</p>
 			<p>Optimized Collision Detection via three-mesh-bvh</p>
 			<p>Car by Poly by Google [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/75h3mi6uHuC)</p>
 		</div>
 	</div>	
+
 	<script type="module" src="game.js"></script>
 </body>
 </html>
