New vehicle and temporary gear up and down test ability!

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
 			<p>Optimized Collision Detection via three-mesh-bvh</p>
 			<p>Car by Poly by Google [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/75h3mi6uHuC)</p>
 			<p>Truckk by KolosStudios [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/jHwRymyg2C)</p>
+			<p>Aeroplane by Gilang Romadhan [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/9VeIc0cybp4)</p>
+			<p>Landing Gear and Animations Added By TheKrakken11, Project Creator</p>
 		</div>
 	</div>	
 	<button onclick="document.getElementById('helpModal').style.display='block'">
@@ -165,6 +167,8 @@
 			<p>r = switch pov</p>
 			<p>f = prevent cursor from exiting screen</p>
 			<p>esc = allow cursor to exit screen</p>
+			<p>t = gear up</p>
+			<p>v = gear down</p>
 			<h2>Other</h2>
 			<p>move mouse left and right to rotate view</p>
 			<p>enter a friend's capital letter id in the top left corner box</p>
