--- a/index.html
+++ b/index.html
@@ -133,7 +133,62 @@
 		<button id="down">↓</button>
 		<button id="right">→</button>
 	</div>
-	
+	<div id="speed" style="
+		position: absolute;
+		bottom: 30%;
+		left: 20px;
+		color: white;
+		font-family: monospace;
+		font-size: 18px;
+		background: rgba(0,0,0,0.6);
+		padding: 5px;
+		border-radius: 5px;
+		pointer-events: none;
+	">
+		Speed: 0.0 kts
+	</div>
+	<div id="thrust" style="
+		position: absolute;
+		bottom: 40%;
+		left: 20px;
+		color: white;
+		font-family: monospace;
+		font-size: 18px;
+		background: rgba(0,0,0,0.6);
+		padding: 5px;
+		border-radius: 5px;
+		pointer-events: none;
+	">
+		Thrust: 0.0 N
+	</div>
+	<div id="zmv" style="
+		position: absolute;
+		bottom: 50%;
+		left: 20px;
+		color: white;
+		font-family: monospace;
+		font-size: 18px;
+		background: rgba(0,0,0,0.6);
+		padding: 5px;
+		border-radius: 5px;
+		pointer-events: none;
+	">
+		Lift + gravity: 0.0 kts
+	</div>
+	<div id="alt" style="
+		position: absolute;
+		bottom: 60%;
+		left: 20px;
+		color: white;
+		font-family: monospace;
+		font-size: 18px;
+		background: rgba(0,0,0,0.6);
+		padding: 5px;
+		border-radius: 5px;
+		pointer-events: none;
+	">
+		Altitide: 0.0 ft
+	</div>
 	<button onclick="document.getElementById('creditsModal').style.display='block'">
 		View Credits
 	</button>
@@ -169,6 +224,10 @@
 			<p>esc = allow cursor to exit screen</p>
 			<p>t = gear up</p>
 			<p>v = gear down</p>
+			<p>up arrow = tilt up in plane</p>
+			<p>down arrow = tilt down in plane</p>
+			<p>left arrow = roll left in plane</p>
+			<p>right arrow = roll right in plane</p>
 			<h2>Other</h2>
 			<p>move mouse left and right to rotate view</p>
 			<p>enter a friend's capital letter id in the top left corner box</p>
