--- a/index.html
+++ b/index.html
@@ -189,6 +189,35 @@
 	">
 		Altitide: 0.0 ft
 	</div>
+	<div id="warn" style="
+		position: absolute;
+		bottom: 50%;
+		left: 50%;
+		color: red;
+		font-family: monospace;
+		font-size: 32px;
+		pointer-events: none;
+	">
+		! STALL !
+	</div>
+	<div id="braking" style="
+		width: 120px;
+		padding: 5px;
+		text-align: center;
+		background-color: #555;
+		color: white;
+		border-radius; 8px;
+		box-shadow: 0 0 10px rgba(0, 255, 255, 0);
+		transition: box-shadow 0.4s ease, background-color 0.4s ease;
+		font-family: monospace;
+		position: absolute;
+		bottom: 15%;
+		left: 20px;
+		font-size: 17px;
+	">
+		<p>BRAKING</p>
+		<p>ON</p>
+	</div>
 	<button onclick="document.getElementById('creditsModal').style.display='block'">
 		View Credits
 	</button>
@@ -203,6 +232,7 @@
 			<p>Car by Poly by Google [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/75h3mi6uHuC)</p>
 			<p>Truckk by KolosStudios [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/jHwRymyg2C)</p>
 			<p>Aeroplane by Gilang Romadhan [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/9VeIc0cybp4)</p>
+			<p>Tree by Zsky [CC-BY] (https://creativecommons.org/licenses/by/3.0/) via Poly Pizza (https://poly.pizza/m/uxSb2WTPU4)</p>
 			<p>Landing Gear and Animations Added By TheKrakken11, Project Creator</p>
 		</div>
 	</div>	
